# mental-load

./: CLAUDE.md  tasks.md
.claude/: settings.local.json
.github/workflows/: deploy-frontend.yml  keep-alive.yml
backend/: .env.example  aivin.db  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_nullable_completed_by_id.py  003_rename_continuous_to_eenmalig.py  004_add_autocomplete_column.py  004_add_task_assignment.py  005_add_task_assignment.py  006_add_auth_fields.py  007_add_notes_table.py  008_add_task_description.py
backend/scripts/: migrate.py
backend/src/application/: __init__.py  auth_usecases.py  interfaces.py  member_usecases.py  note_usecases.py  task_usecases.py
backend/src/domain/: __init__.py  entities.py  services.py  value_objects.py
backend/src/infrastructure/: __init__.py  auth.py  database.py  repositories.py  startup.py  task_importer.py
backend/src/presentation/: dependencies.py  main.py  schemas.py
backend/src/presentation/routes/: __init__.py  admin.py  auth.py  history.py  members.py  notes.py  tasks.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_database.py  test_domain.py  test_usecases.py
frontend/: .env.production.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: auth.spec.ts  notepad.spec.ts  task-actions.spec.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: AddTaskForm.tsx  (+12 more)
plans/: initial.md  task-interactions.md
(+1 files in other folders)
